README: Add info about layer

--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 # Meta Webstuff
 
+Covers some distro utility stuff to be used for web UIs and browsers.
+
 All metadata is MIT licensed unless otherwise stated. Source code included
 in tree for individual recipes is under the LICENSE stated in each recipe
 (.bb file) unless otherwise stated.
