--- a/README
+++ b/README
@@ -5,3 +5,5 @@ Covers some distro utility stuff to be used for web UIs and browsers.
 All metadata is MIT licensed unless otherwise stated. Source code included
 in tree for individual recipes is under the LICENSE stated in each recipe
 (.bb file) unless otherwise stated.
+
+Contact: Florian Boor <florian@kernelconcepts.de>
